--- a/backend/templates/lut2/gallery.html
+++ b/backend/templates/lut2/gallery.html
@@ -7,7 +7,8 @@
     <title>KAGI CITY VISION - 數位畫廊</title>
 
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    {% load static %}
+    <link href="{% static 'css/tailwind.css' %}" rel="stylesheet">
 
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
